# ControlCam

./: .gitignore  Makefile  README.md  base_functions.h  base_types.h  camera scans.txt  camera_finder.sh  ctrlcam.files  ctrlcam.includes  external.h  fstr_manipulation.h  ic2.files  ic2.includes  json_functions.h  macs  main.c  portscan.py  replace  replace.c
cameras/: c1.json  c2.json  c4.json  c5.json  c6.json  c7.json  cam1.json
config/: Apexis.json  CoolCam.json  Shenzhen_Smarteye.json
vision/: CMakeLists.txt  Makefile  all_cams.html  anotations.txt  asdf.txt  bg.txt  canetas.txt  cascade_24.xml  cascade_50.xml  classificacao.py  cmake_install.cmake  cvui.h  grabber.cpp  main.cpp  manhatan  obj_detect.cpp  obj_detect_face.cpp  obj_range.cpp  pitagoras  posicionamento.cpp  qsort.h  rejected.txt  sample_vec_out  square-wrangle.py  vision  vision.files  yolo_obj_detection.cpp
vision/cameras/: c0.json  c1.json  c2.json  c3.json  c4.json  c5.json  c6.json  c7.json  cam1.json  macs
vision/config/: Apexis.json  Chic_Technology.json  CoolCam.json  Shenzhen_Smarteye.json  template.json
vision/posicionamento/: CMakeLists.txt  Makefile  classificacao.py  cmake_install.cmake  posicionamento.cpp  true  vision
vision/posicionamento/cameras/: cam1.json  cam2.json
vision/posicionamento/config/: Chic_Technology.json  Shenzhen_Smarteye.json  VSTC.json
